# Lexical-Analyzer

./: CMakeLists.txt  DFA.cpp  DFA.h  DFAAndTokens.cpp  DFAAndTokens.h  MinDFA.cpp  MinDFA.h  NFARules.cpp  NFARules.h  NFAToDFA.cpp  NFAToDFA.h  Node.cpp  Node.h  NonFiniteAutomata.cpp  NonFiniteAutomata.h  Symbol_table_builder.cpp  Symbol_table_builder.h  code.txt  main.cpp
